--- a/main.html
+++ b/main.html
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <title>Dog Adoption</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+    <ul>
+
+        <!-- Golden Retriever -->
+        <li>
+            <a href="https://en.wikipedia.org/wiki/Golden_Retriever" target="_blank">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/9/99/Golden_Retriever_Carlos_%2810590990556%29.jpg" 
+                     alt="Golden Retriever" width="200">
+            </a>
+        </li>
+
+        <!-- Poodle -->
+        <li>
+            <a href="https://en.wikipedia.org/wiki/Poodle" target="_blank">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/8/88/Poodle_miniature_brown.jpg" 
+                     alt="Poodle" width="200">
+            </a>
+        </li>
+
+    </ul>
 
 </body>
-
 </html>
