--- a/main.html
+++ b/main.html
@@ -6,23 +6,21 @@
 <body>
 
     <ul>
-
-        <!-- Golden Retriever -->
+        <!-- Golden Retriever (using provided image link 1 + wiki link 4) -->
         <li>
-            <a href="https://en.wikipedia.org/wiki/Golden_Retriever" target="_blank">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/9/99/Golden_Retriever_Carlos_%2810590990556%29.jpg" 
+            <a href="https://en.wikipedia.org/wiki/Golden_Retriever" target="_blank" rel="noopener">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/BassetHound_profil.jpg"
                      alt="Golden Retriever" width="200">
             </a>
         </li>
 
-        <!-- Poodle -->
+        <!-- Poodle (using provided image link 2 + wiki link 3) -->
         <li>
-            <a href="https://en.wikipedia.org/wiki/Poodle" target="_blank">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/8/88/Poodle_miniature_brown.jpg" 
+            <a href="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Full_attention_%288067543690%29.jpg/1280px-Full_attention_%288067543690%29.jpg" target="_blank" rel="noopener">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Full_attention_%288067543690%29.jpg/1280px-Full_attention_%288067543690%29.jpg"
                      alt="Poodle" width="200">
             </a>
         </li>
-
     </ul>
 
 </body>
