--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
 
         <!-- Poodle (using provided image link 2 + wiki link 3) -->
         <li>
-            <a href="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Full_attention_%288067543690%29.jpg/1280px-Full_attention_%288067543690%29.jpg" target="_blank" rel="noopener">
+            <a href="https://en.wikipedia.org/wiki/Poodle" target="_blank" rel="noopener">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Full_attention_%288067543690%29.jpg/1280px-Full_attention_%288067543690%29.jpg"
                      alt="Poodle" width="200">
             </a>
